<resources>
    <string name="app_name">TravelHopper</string>

    <!-- Navigation Strings -->
    <string name="my_home">My Home</string>
    <string name="my_trips">My Trips</string>
    <string name="my_gallery">My Gallery</string>
    <string name="my_camera">My Camera</string>
    <string name="my_map">My Map</string>
    <string name="my_settings">My Settings</string>

    <!-- Permission/Intent Strings -->
    <string name="camera_permission_granted">Camera Permission Granted</string>
    <string name="camera_permission_denied">Camera Permission Denied</string>
    <string name="record_audio_permission_granted">Record Audio Permission Granted</string>
    <string name="take_photo">Take Photo</string>
    <string name="record_video">Record Video</string>
    <string name="back_button">Go back</string>

    <!-- Fragment Names -->
    <string name="home_fragment">Home Fragment</string>
    <string name="camera_fragment">Camera Fragment</string>
    <string name="planner_fragment">Planner Fragment</string>
    <string name="maps_fragment">Maps Fragment</string>
    <string name="settings_fragment">Settings Fragment</string>

    <!-- Page(Fragment) Titles -->
    <string name="my_home_title">Where will you explore?</string>
    <string name="my_trips_title">My Trips</string>
    <string name="my_gallery_title">My Gallery</string>
    <string name="my_map_title">My Map</string>
    <string name="my_settings_title">My Settings</string>
    <string name="create_new_trip_title">Create New Trip</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Content/Content Description Strings -->
    <string name="trip_title">Trip Title</string>
    <string name="trip_name_content_description">Trip name</string>
    <string name="trip_location_content_description">Trip location</string>
    <string name="trip_details_content_description">Trip details</string>
    <string name="trip_start_date_content_description">Trip start date</string>
    <string name="trip_end_date_content_description">Trip end date</string>
    <string name="trip_secondary_title">Trip Secondary Title</string>
    <string name="trip_content_text">Trip Content Text</string>
    <string name="media_content_description">Photo or Video</string>
    <string name="favourite_button">Favourite Button</string>
    <string name="camera_button">Camera Button</string>
    <string name="add_media">Add Photo or Video</string>
    <string name="filter_string">Filter by…</string>
    <string name="ascending_trips">Ascending</string>
    <string name="descending_trips">Descending</string>
    <string name="favourite_trips">Favourites</string>
    <string name="add_new_trip">Add New Trip</string>
    <string name="switch_cameras">Switch Cameras</string>
    <string name="add_trip_to_favourites">Add trip to favourites</string>
    <string name="add_trip_to_my_trips">Add Trip to My Trips</string>
    <string name="empty_string" />
    <string name="settings_button">My Settings Button</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nested_scroll_view">Nested Scroll View</string>
    <string name="login_activity_title">Welcome to TravelHopper!</string>
    <string name="prompt_email">Enter Email</string>
    <string name="prompt_password">Enter Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome !</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login has failed, try again later</string>
    <string name="oauth_client_ID">139975808565-bqdv5d3ieeqpcn2j2imba883vtnqpo48.apps.googleusercontent.com</string>
    <string name="google_account_profile_button">Google Account Profile Button</string>
    <string name="account_info">My Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="google_account_title">My Google Account</string>
    <string name="google_account_email">Google Account Email</string>
    <string name="google_account_given_name">Google Account Given Name</string>
    <string name="google_account_id">Google Account ID</string>
    <string name="google_account_display_name">Google Account Display Name</string>
    <string name="remove_google_account_from_app">Remove Google Account</string>

</resources>