<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/googleAccountFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:tag="GOOGLE_ACCOUNT_FRAGMENT"
    tools:context=".GoogleAccountFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/googleAccountToolbar"
            style="@style/TextAppearance.Material3.ActionBar.Title"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_arrow_back_icon"
            app:title="@string/google_account_title" />

    </com.google.android.material.appbar.AppBarLayout>


    <RelativeLayout
        android:id="@+id/fragmentRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">


        <ImageView
            android:id="@+id/googleAccountProfileIcon"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="100dp"
            app:srcCompat="@drawable/ic_account_circle_icon" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/googleAccountID"
            style="@style/TextAppearance.Material3.DisplaySmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/googleAccountProfileIcon"
            android:layout_centerInParent="true"
            android:layout_marginTop="25dp"
            android:text="@string/google_account_id" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/googleAccountDisplayName"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/googleAccountID"
            android:layout_centerInParent="true"
            android:layout_marginTop="25dp"
            android:text="@string/google_account_display_name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/googleAccountGivenName"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/googleAccountDisplayName"
            android:layout_centerInParent="true"
            android:layout_marginTop="25dp"
            android:text="@string/google_account_given_name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/googleAccountEmail"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/googleAccountGivenName"
            android:layout_centerInParent="true"
            android:layout_marginTop="25dp"
            android:text="@string/google_account_email" />

        <RelativeLayout
            android:id="@+id/googleAccountButtonGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signOutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:text="@string/sign_out" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/removeGoogleAccountButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/signOutButton"
                android:layout_marginEnd="100dp"
                android:layout_alignParentBottom="true"
                app:backgroundTint="@color/terracotta_orange"
                android:text="@string/remove_google_account_from_app"/>

        </RelativeLayout>

    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>