<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityLoginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.firebaseAuth.SignInActivity">

    <RelativeLayout
        android:id="@+id/activityContentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/loginActivityTitle"
            style="@style/TextAppearance.Material3.DisplayMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_activity_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/usernameInputLayout"
            android:layout_marginTop="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true" />
        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/loginButtonLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:layout_gravity="bottom|center_horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/action_sign_in" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/signInWithGoogleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_below="@id/signInButton"
            android:layout_centerInParent="true"
            app:buttonSize="wide" />
    </RelativeLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/circularProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_anchorGravity="bottom" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>