<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createNewTripFragmentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateNewTripFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/navigation_top_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/top_bar_layout"
                android:layout_width="match_parent"
                android:layout_height="?attr/collapsingToolbarLayoutLargeSize"
                android:fitsSystemWindows="true"
                style="?attr/collapsingToolbarLayoutLargeStyle"
                android:background="@android:color/transparent"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">


                <ImageView
                    android:id="@+id/media_frame_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/media_content_description"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.7"/>


                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/createNewTripFragmentToolbar"
                    style="@style/TextAppearance.Material3.DisplayMedium"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    android:elevation="0dp"
                    app:title="@string/create_new_trip_title"
                    app:layout_collapseMode="pin"/>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:id="@+id/fragmentContentLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="200dp"
            android:orientation="vertical"
            android:padding="15dp">

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/content_divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                app:dividerColor="@color/azure_blue"
                app:dividerThickness="5dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_trip_name"
                style="?attr/textInputOutlinedDenseStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/content_divider"
                android:layout_marginBottom="20dip"
                app:endIconMode="clear_text"
                app:startIconContentDescription="@string/trip_name_content_description"
                app:startIconDrawable="@drawable/ic_title_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_trip_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/trip_name_content_description" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_trip_location"
                style="?attr/textInputOutlinedDenseStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/input_trip_name"
                android:layout_marginBottom="20dip"
                app:endIconMode="clear_text"
                app:startIconContentDescription="@string/trip_location_content_description"
                app:startIconDrawable="@drawable/ic_location_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_trip_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/trip_location_content_description" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_trip_start_date"
                style="?attr/textInputOutlinedDenseStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/input_trip_location"
                android:layout_marginBottom="20dip"
                app:endIconMode="clear_text"
                app:startIconContentDescription="@string/trip_start_date_content_description"
                app:startIconDrawable="@drawable/ic_calendar_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_trip_start_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/trip_start_date_content_description" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_trip_end_date"
                style="?attr/textInputOutlinedDenseStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/input_trip_start_date"
                android:layout_marginBottom="20dip"
                app:endIconMode="clear_text"
                app:startIconContentDescription="@string/trip_end_date_content_description"
                app:startIconDrawable="@drawable/ic_calendar_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_trip_end_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/trip_end_date_content_description" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_trip_details"
                style="?attr/textInputOutlinedDenseStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/input_trip_end_date"
                android:layout_marginBottom="20dip"
                app:endIconMode="clear_text"
                app:startIconContentDescription="@string/trip_details_content_description"
                app:startIconDrawable="@drawable/ic_location_icon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_trip_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/trip_details_content_description" />

            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addTripToFavouritesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/add_trip_to_favourites"
        android:src="@drawable/ic_favourite_outlined_icon"
        app:layout_anchor="@id/navigation_top_bar"
        app:layout_anchorGravity="bottom|end" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/createNewTripButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/add_trip_to_my_trips"
        android:elevation="10dp"
        android:fitsSystemWindows="true"
        android:src="@drawable/ic_add_icon" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>