<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tripCardView"
    style="?attr/materialCardViewElevatedStyle"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true">

    <RelativeLayout
        android:id="@+id/tripCardContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/tripMedia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/tripFavouriteIcon"
            style="?attr/materialIconButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tripMedia"
            android:button="@drawable/sl_favourite_24dp"
            android:contentDescription="@string/favourite_button" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tripName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trip_title"
                android:textAppearance="?attr/textAppearanceTitleLarge" />

            <TextView
                android:id="@+id/tripStartDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tripName"
                android:layout_marginTop="10dp"
                android:text="@string/trip_secondary_title"
                android:textAppearance="?attr/textAppearanceSubtitle2" />

            <TextView
                android:id="@+id/tripEndDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tripStartDate"
                android:layout_marginTop="10dp"
                android:text="@string/trip_secondary_title"
                android:textAppearance="?attr/textAppearanceSubtitle2" />

            <TextView
                android:id="@+id/tripLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tripEndDate"
                android:layout_marginTop="10dp"
                android:text="@string/trip_secondary_title"
                android:textAppearance="?attr/textAppearanceSubtitle2" />

        </RelativeLayout>

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>
